# A07-enterprise-data-agent

./: ch  pyproject.toml  test.txt
backend/: .env.example  README.md
backend/app/: __init__.py  main.py
backend/app/api/v1/: chat.py  health.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  base.py  init.sql  seed.py  session.py
backend/app/models/: common.py  dim.py  equipment.py  inventory.py  production.py  quality.py
backend/app/services/: llm_factory.py  sql_templates.py
docs/proposal/: architecture.md  features-highlights.md  tech-stack.md  topic-rationale.md
